--- a/com.cn.mcdonalds.www/项目/css/index.css
+++ b/com.cn.mcdonalds.www/项目/css/index.css
@@ -5,26 +5,41 @@ body{
 }
 .title{
     position: fixed;
+    top: 0;
     width: 100%;
     height: 53px;
     /* background-color: aqua; */
     border-bottom: 1px solid #D9D9D9;
+    background-color: #ffffff;
 }
 .title-left img{
     float: left;
-    margin-top: 15px;
-    margin-left: 10px;
+    margin-top: 17px;
+    margin-left: 19px;
 }
 .title-right img{
     float: left;
     width: 36px;
     height: 32px;
     margin-top: 10px;
-    margin-left: 156px;
+    margin-left: 144px;
 }
 .content{
+    margin-top: 53px;
+    overflow: hidden;
     width: 100%;
-    
+    height: 10000px;
 }
-
-/* .content-logo */
+.content-logo{
+    padding: 0 10px;
+}
+.content-logo img{
+    width: 100%;
+}
+/* 底部 */
+/* .bottom{
+    position: fixed;
+    width: 100%;
+    height: 53px;
+    background-color: aqua;
+} */
