--- a/com.cn.mcdonalds.www/项目/css/index.css
+++ b/com.cn.mcdonalds.www/项目/css/index.css
@@ -31,10 +31,19 @@ body{
     height: 10000px;
 }
 .content-logo{
-    padding: 0 10px;
+    padding: 10px 10px;
 }
 .content-logo img{
     width: 100%;
+}
+.content-logotow{
+    width: 100%;
+}
+.content-logotow img{
+    float: left;
+    width: 45%;
+    height: 100%;
+    padding: 10px 10px;
 }
 /* 底部 */
 /* .bottom{
